# stripe_project

./: Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
payments/: models.py  views.py
payments/migrations/: 0001_initial.py
stripe_project/: settings.py  urls.py
templates/payments/: item.html
