[tool.poetry]
name = "stripe-project"
version = "0.1.0"
description = "Платежная система(бесплатный тестовый режим)"
authors = ["Константин Ковальчук <kostia-kovallyk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
