[tool.poetry]
name = "stripe-project"
version = "0.1.0"
description = "Платежная система(бесплатный тестовый режим)"
authors = ["Константин Ковальчук <kostia-kovallyk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.2.1"
stripe = "^12.1.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
