[tool.poetry]
name = "stripe-project"
version = "0.1.0"
description = "Платежная система(бесплатный тестовый режим)"
authors = ["Константин Ковальчук <kostia-kovallyk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.2.1"
stripe = "^12.1.0"
python-dotenv = "^1.1.0"
psycopg = "^3.2.9"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "migrations",
    "static",
    "media",
    "env",
    ".env",
    "settings.py",
]
extend-ignore = ["E203", "W503"]